# IPC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a.cpp
.github/workflows/: tests.yml
configs/: Logger.xml
src/: CMakeLists.txt
src/Socket/: CMakeLists.txt
src/Socket/include/: ClientSocket.h  ServerSocket.h  Socket.h  SocketAddress.h  SocketTCP.h
src/Socket/src/: ClientSocket.cpp  ServerSocket.cpp  Socket.cpp  SocketAddress.cpp  SocketTCP.cpp
src/Socket/tests/: SocketAddress_tests.cpp  SocketTCP_test.cpp
src/common/: CMakeLists.txt  logs.h
src/test/: CMakeLists.txt
src/test/include/: test.h
src/test/src/: test.cpp
src/test/tests/: test_tests.cpp
submodules/: CMakeLists.txt
